docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -69,7 +69,27 @@
     "\n",
     "[Link](https://some.3b1b.co/)\n",
     "\n",
-    "I've decided to participate in this competition.\n"
+    "I've decided to participate in this competition.\n",
+    "\n",
+    "## **Websites for Blog Resources**\n",
+    "\n",
+    "**Quantamagazine**\n",
+    "\n",
+    "Quanta Magazine is an editorially independent online publication, launched in 2012 by the Simons Foundation. Its purpose is to “illuminate science”—providing deep, accessible journalism focused on fundamental research in physics, mathematics, theoretical computer science, and the basic life sciences.\n",
+    "\n",
+    "Quanta excels in covering complex and foundational scientific topics across multiple domains—`physics`, `math`, `biology`, and `computer science`.\n",
+    "\n",
+    "There are many writers contributing to Quanta Magazine, each bringing their unique perspective and expertise.\n",
+    "\n",
+    "Few of the writers are:\n",
+    "\n",
+    "`Grant Sanderson`\n",
+    "\n",
+    "[Grant_Sanderson_Blog_Link](https://www.quantamagazine.org/authors/sandserson_grant/)\n",
+    "\n",
+    "`Main Blog Link`\n",
+    "\n",
+    "[Main_Blog_Link](https://www.quantamagazine.org/) : Choose the field i.e. `Physics`, `Math`, `Biology`, `Computer Science` and start reading.\n"
    ]
   },
   {
