docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -89,7 +89,19 @@
     "\n",
     "`Main Blog Link`\n",
     "\n",
-    "[Main_Blog_Link](https://www.quantamagazine.org/) : Choose the field i.e. `Physics`, `Math`, `Biology`, `Computer Science` and start reading.\n"
+    "[Main_Blog_Link](https://www.quantamagazine.org/) : Choose the field i.e. `Physics`, `Math`, `Biology`, `Computer Science` and start reading.\n",
+    "\n",
+    "**Read the Blogs and Research related to Physics, Bio, Maths, Computer Science to get idea about currently hyped research areas**\n",
+    "\n",
+    "Read those research related to maths, computer science to have an idea about the `Research Field` that you want to purse `Masters` in `Computer Science`.\n",
+    "\n",
+    "Then write and study about that particular field and approach the Professor of Foreign University.\n",
+    "\n",
+    "[Blog_Link](https://www.quantamagazine.org/)\n",
+    "\n",
+    "**After Reading any Blog, Contribute to the Daily Research Github that you've Created**\n",
+    "\n",
+    "[Github_link](https://github.com/ToniBirat7/Daily_Research_Notes.git)\n"
    ]
   },
   {
