docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -15,6 +15,12 @@
     "\n",
     "## **Mathematics**\n",
     "\n",
+    "### **Graph Visualization**\n",
+    "\n",
+    "[desmos3d](https://www.desmos.com/3d/) : For 3D graph visualization\n",
+    "\n",
+    "[desmos2d](https://www.desmos.com/calculator) : For 2D graph visualization\n",
+    "\n",
     "### **Multivariable Calculus**\n",
     "\n",
     "**IIT Mathematics**\n",
