docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -561,6 +561,10 @@
     "\n",
     "[Understand_Jacobian](https://www.youtube.com/watch?v=wCZ1VEmVjVo)\n",
     "\n",
+    "**ritvikmath**\n",
+    "\n",
+    "[Understand_Jacobian](https://www.youtube.com/watch?v=AdV5w8CY3pw&t=4s)\n",
+    "\n",
     "Watch the above video to have complete idea of `Matrix`, `Vectors` and `Jacobian`.\n",
     "\n",
     "<hr>\n",
@@ -841,17 +845,7 @@
     "3. **Jacobian**: $J_f(x)$ for vector-valued functions — matrix bundling all partial derivatives; best linear predictor for vector outputs.\n",
     "4. **Hessian**: matrix of second derivatives for scalar functions — describes curvature (quadratic term in Taylor expansion).\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 8) Wrap-up / next steps\n",
-    "\n",
-    "Would you like any of these next actions?\n",
-    "\n",
-    "- I can **graph** the example $f(x,y)$ and show the circle→ellipse mapping visually.\n",
-    "- I can produce a **small Python notebook** that numerically verifies $J_f(x)h$ vs exact changes for several $h$ (and plots relative error as $\\|h\\|\\to 0$).\n",
-    "- Or I can show a worked **chain-rule example** across two composed functions (with algebra and numbers) to illustrate backprop.\n",
-    "\n",
-    "Which one should I show? (If you want the notebook/plot, say “notebook” and I’ll generate it.)\n"
+    "---\n"
    ]
   }
  ],
