docs: resources update

--- a/Mathematics_Behind_Neural_Network/Notes.ipynb
+++ b/Mathematics_Behind_Neural_Network/Notes.ipynb
@@ -648,24 +648,31 @@
    "id": "c7e9b175",
    "metadata": {},
    "source": [
-    "# Jacobian — why we need it, and exactly what information it gives (deep, ordered explanation)\n",
+    "### **Jacobian — why we need it, and exactly what information it gives (deep, ordered explanation)**\n",
     "\n",
-    "## 1) **Why do we find the Jacobian?** (the short motivation)\n",
+    "[Watch_This_Video](https://www.youtube.com/watch?v=AdV5w8CY3pw&t=4s) : Watch this video an write hand written notes.\n",
+    "\n",
+    "**Why do we find the Jacobian?**\n",
     "\n",
     "- When a function has **many inputs** and **many outputs** (i.e. $f:\\mathbb{R}^n\\to\\mathbb{R}^m$), a single number cannot describe how the output changes when the input is nudged.\n",
+    "\n",
     "- We need a structured object that gives the **first-order** (linear) relationship between every input direction and every output component simultaneously. That object is the **Jacobian matrix** $J_f(x)$.\n",
+    "\n",
     "- Practically, the Jacobian lets us:\n",
     "\n",
     "  - **Linearize** a nonlinear map locally (so we can predict small changes cheaply).\n",
+    "\n",
     "  - **Propagate sensitivities** through compositions (chain rule — the reason backprop works).\n",
+    "\n",
     "  - **Analyze stability** of dynamical systems (eigenvalues of Jacobian).\n",
+    "\n",
     "  - **Measure local volume change** (Jacobian determinant) when warping coordinate systems or densities.\n",
     "\n",
     "So: **we compute Jacobians because they are the minimal, exact-to-first-order linear model of a vector-valued function at a point** — and that model is useful for prediction, inversion, optimization, and analysis.\n",
     "\n",
     "---\n",
     "\n",
-    "## 2) **What information does the Jacobian give?** (granular list, with meaning)\n",
+    "**What information does the Jacobian give?**\n",
     "\n",
     "Let $f=(f_1,\\dots,f_m):\\mathbb{R}^n\\to\\mathbb{R}^m$. The Jacobian at $x$ is the $m\\times n$ matrix\n",
     "\n",
@@ -735,7 +742,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 3) **Concrete numeric example — step-by-step (so it’s not abstract)**\n",
+    "**Concrete numeric example — step-by-step (so it’s not abstract)**\n",
     "\n",
     "Take the same example we used earlier:\n",
     "\n",
@@ -783,7 +790,7 @@
     "\n",
     "Thus $\\Delta f_{\\text{exact}} = (0.0001,\\,-0.04)$.\n",
     "\n",
-    "6. **Error of linear approximation**:\n",
+    "**Error of linear approximation**:\n",
     "\n",
     "- Error vector $= \\Delta f_{\\text{exact}} - \\Delta f_{\\text{lin}} = (0.0001,\\;0).$\n",
     "- Norm of $h$: $\\|h\\| = \\sqrt{0.01^2 + (-0.02)^2} = \\sqrt{0.0001 + 0.0004} = \\sqrt{0.0005} \\approx 0.02236067977.$\n",
@@ -799,7 +806,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 4) **Chain rule & backprop (practical algebraic uses)**\n",
+    "**Chain rule & backprop (practical algebraic uses)**\n",
     "\n",
     "- For compositions $h(x)=g(f(x))$:\n",
     "\n",
@@ -812,40 +819,19 @@
     "\n",
     "This algebraic property is exactly why neural network training is efficient: instead of computing full Jacobians, autodiff calculates Jacobian-vector or vector-Jacobian products cheaply.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 5) **Geometric intuition (circle → ellipse)**\n",
-    "\n",
-    "Place a tiny circle of input perturbations around $x$. Under $f$, that circle maps approximately to an ellipse in output space. The Jacobian is the linear map that sends the circle to that ellipse:\n",
-    "\n",
-    "- The ellipse axes lengths = singular values of $J$.\n",
-    "- The directions of axes = singular vectors.\n",
-    "- The area of the ellipse ≈ $|\\det J|$ × (area of circle).\n",
-    "\n",
-    "So Jacobian = “how the map stretches and rotates infinitesimal neighborhoods.”\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 6) **When & where Jacobians are used (practical examples)**\n",
-    "\n",
-    "- **Numerical solvers**: Newton’s method for systems uses the Jacobian to linearize $F(x)=0$.\n",
-    "- **Stability / dynamical systems**: eigenvalues of the Jacobian tell whether small perturbations grow/decay.\n",
-    "- **Backprop / deep learning**: propagate gradients via Jacobian transpose or efficient VJP/JVP operations.\n",
-    "- **Normalizing flows** (generative models): log-density uses $\\log|\\det J|$ to account for volume change.\n",
-    "- **Computer vision / neuroimaging**: deformation fields between images — Jacobian determinant indicates local compression/expansion (useful in voxel-based morphometry).\n",
-    "- **Sensitivity analysis**: find which inputs most affect outputs by inspecting columns or computing norms.\n",
-    "- **Inverse function / implicit function theorems**: Jacobian non-singularity is the condition for local solvability/invertibility.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 7) **Quick hierarchy recap (how Jacobian fits with derivative / gradient / Hessian)**\n",
-    "\n",
-    "1. **1-D derivative**: scalar $f'(a)$ — slope of tangent, linear approximation.\n",
-    "2. **Gradient**: $\\nabla f(x)$ for scalar-valued multivariable functions — vector of partial derivatives; best linear predictor for scalar output.\n",
-    "3. **Jacobian**: $J_f(x)$ for vector-valued functions — matrix bundling all partial derivatives; best linear predictor for vector outputs.\n",
-    "4. **Hessian**: matrix of second derivatives for scalar functions — describes curvature (quadratic term in Taylor expansion).\n",
-    "\n",
     "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d2f3190",
+   "metadata": {},
+   "source": [
+    "## **Tomorrow**\n",
+    "\n",
+    "First, watch the `Jacobian` video and make note then\n",
+    "\n",
+    "Cont from `Jacobian Chain Rule` write proper notes.\n"
    ]
   }
  ],
